# BusinessAnalysis

./: AGENTS.md  CLAUDE.md  CODEX_REVIEW_POLICY.md  DESIGN.md  PHASE_10_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  PHASE_9_PLAN.md  README.md  UIUX_BRIEF.md  project.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_agent_tasks.py  0003_daily_metrics.py  0004_high_concurrency_indexes.py  0005_shops_unique_external.py  0006_agent_tasks_account_id.py
backend/app/: main.py
backend/app/agents/: base.py  daily_report.py  llm.py  review_batch_classifier.py  review_classifier.py
backend/app/api/: deps.py
backend/app/core/: celery_app.py  config.py  db.py  lock.py  ratelimit.py  redis.py
backend/app/models/: __init__.py  account.py  agent_task.py  daily_metrics.py  mixins.py  order.py  product.py  review.py  shop.py
backend/app/schemas/: account.py  agent_io.py  agent_task.py  common.py  imports.py  order.py  product.py  profit.py  report.py  review.py  shop.py
backend/app/services/: account.py  agent_task.py  analytics.py  order.py  product.py  profit.py  report.py  review.py  shop.py  tenant.py
backend/app/tasks/: base.py  imports.py  llm.py  maintenance.py  profit.py  (+2 more)
backend/docs/: import_templates.md
backend/scripts/: import_via_api.py  make_xlsx.py  seed_base.py
backend/tests/: test_import_common.py  test_profit_calc.py  test_ratelimit.py  test_redis_lock.py  test_report_selection.py
(+18 files in other folders)
