[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ecommerce-copilot"
version = "0.1.0"
description = "AI E-Commerce Copilot — Agent-driven ops backend for Shopee/TikTok Shop/Lazada sellers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "celery>=5.4",
    "pymysql>=1.1",
    "anthropic>=0.34",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
